Bug 885770 - script filename can be NULL in shell load, r=njn